[gd_scene load_steps=3 format=3 uid="uid://b2y8q8eealewp"]

[ext_resource type="Script" uid="uid://dkxbhjvxeyu3u" path="res://world.gd" id="1_fj7yv"]
[ext_resource type="Script" uid="uid://bnw0pjkgmixfl" path="res://inputCheck.gd" id="2_fj7yv"]

[node name="World" type="Node"]
script = ExtResource("1_fj7yv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 450.0
offset_top = 230.0
offset_right = -450.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14
script = ExtResource("2_fj7yv")

[node name="Label" type="Label" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="StartGame" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="UsernameInput" type="LineEdit" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter a username"
alignment = 1
max_length = 20

[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
